--- a/src/components/content/Testimonials.astro
+++ b/src/components/content/Testimonials.astro
@@ -22,14 +22,14 @@ import Card from "@components/base/Card.astro";
             <div class="w-full flex flex-col gap-8 font-sans">
               <iconify-icon class="iconify w-8 h-8 flex items-center justify-center text-3xl text-primary-600 dark:text-rose-500" icon="fa6-solid:quote-left"></iconify-icon>
               <p class="text-muted-500 dark:text-muted-300">
-                Текст с положительным отзывом.
+                Текст отзыва Текст отзыва Текст отзыва Текст отзыва Текст отзыва Текст отзыва.
               </p>
               <div class="w-full flex items-center gap-3">
                 <div>
                   <h4 class="font-medium text-sm text-muted-800 dark:text-muted-100">
                     Иван Иванов
                   </h4>
-                  <p class="text-xs text-muted-400">Los Angeles, CA</p>
+                  <p class="text-xs text-muted-400">Глав.врач</p>
                 </div>
               </div>
             </div>
@@ -41,14 +41,14 @@ import Card from "@components/base/Card.astro";
             <div class="w-full flex flex-col gap-8 font-sans">
               <iconify-icon class="iconify w-8 h-8 flex items-center justify-center text-3xl text-primary-600 dark:text-rose-500" icon="fa6-solid:quote-left"></iconify-icon>
               <p class="text-muted-500 dark:text-muted-300">
-                Текст с положительным отзывом.
+                Текст отзыва Текст отзыва Текст отзыва Текст отзыва Текст отзыва Текст отзыва.
               </p>
               <div class="w-full flex items-center gap-3">
                 <div>
                   <h4 class="font-medium text-sm text-muted-800 dark:text-muted-100">
-                    Maya Rosselini
+                    Алсу Анваровна
                   </h4>
-                  <p class="text-xs text-muted-400">Milano, IT</p>
+                  <p class="text-xs text-muted-400">Зав.отделения пульмонологии</p>
                 </div>
               </div>
             </div>
@@ -60,14 +60,14 @@ import Card from "@components/base/Card.astro";
             <div class="w-full flex flex-col gap-8 font-sans">
               <iconify-icon class="iconify w-8 h-8 flex items-center justify-center text-3xl text-primary-600 dark:text-rose-500" icon="fa6-solid:quote-left"></iconify-icon>
               <p class="text-muted-500 dark:text-muted-300">
-                Текст с положительным отзывом.
+                Текст отзыва Текст отзыва Текст отзыва Текст отзыва Текст отзыва Текст отзыва.
               </p>
               <div class="w-full flex items-center gap-3">
                 <div>
                   <h4 class="font-medium text-sm text-muted-800 dark:text-muted-100">
-                    Anna Galagher
+                    Григорий Сергеевич
                   </h4>
-                  <p class="text-xs text-muted-400">New York, NY</p>
+                  <p class="text-xs text-muted-400">Зав. хирургии</p>
                 </div>
               </div>
             </div>
@@ -79,14 +79,14 @@ import Card from "@components/base/Card.astro";
             <div class="w-full flex flex-col gap-8 font-sans">
               <iconify-icon class="iconify w-8 h-8 flex items-center justify-center text-3xl text-primary-600 dark:text-rose-500" icon="fa6-solid:quote-left"></iconify-icon>
               <p class="text-muted-500 dark:text-muted-300">
-                Текст с положительным отзывом.
+                Текст отзыва Текст отзыва Текст отзыва Текст отзыва Текст отзыва Текст отзыва.
               </p>
               <div class="w-full flex items-center gap-3">
                 <div>
                   <h4 class="font-medium text-sm text-muted-800 dark:text-muted-100">
-                    Maureen Stevens
+                    Вугар Маисович
                   </h4>
-                  <p class="text-xs text-muted-400">San Diego, CA</p>
+                  <p class="text-xs text-muted-400">Глав.врач</p>
                 </div>
               </div>
             </div>
@@ -98,14 +98,14 @@ import Card from "@components/base/Card.astro";
             <div class="w-full flex flex-col gap-8 font-sans">
               <iconify-icon class="iconify w-8 h-8 flex items-center justify-center text-3xl text-primary-600 dark:text-rose-500" icon="fa6-solid:quote-left"></iconify-icon>
               <p class="text-muted-500 dark:text-muted-300">
-                Текст с положительным отзывом.
+                Текст отзыва Текст отзыва Текст отзыва Текст отзыва Текст отзыва Текст отзыва.
               </p>
               <div class="w-full flex items-center gap-3">
                 <div>
                   <h4 class="font-medium text-sm text-muted-800 dark:text-muted-100">
-                    Arthur Baxter
+                    Михаил Ринатович
                   </h4>
-                  <p class="text-xs text-muted-400">London, UK</p>
+                  <p class="text-xs text-muted-400">Глав.врач</p>
                 </div>
               </div>
             </div>
@@ -116,14 +116,14 @@ import Card from "@components/base/Card.astro";
             <div class="w-full flex flex-col gap-8 font-sans">
               <iconify-icon class="iconify w-8 h-8 flex items-center justify-center text-3xl text-primary-600 dark:text-rose-500" icon="fa6-solid:quote-left"></iconify-icon>
               <p class="text-muted-500 dark:text-muted-300">
-                Текст с положительным отзывом.
+                Текст отзыва Текст отзыва Текст отзыва Текст отзыва Текст отзыва Текст отзыва.
               </p>
               <div class="w-full flex items-center gap-3">
                 <div>
                   <h4 class="font-medium text-sm text-muted-800 dark:text-muted-100">
-                    Matt Perret
+                    Андрей Андреевич
                   </h4>
-                  <p class="text-xs text-muted-400">Paris, FR</p>
+                  <p class="text-xs text-muted-400">Глав.врач</p>
                 </div>
               </div>
             </div>
