--- a/src/components/content/features/SideStatsRight.astro
+++ b/src/components/content/features/SideStatsRight.astro
@@ -3,7 +3,7 @@ import MockupOne from "@components/mockup/MockupOne.astro";
 ---
 
 <div
-  id="product"
+  id="osnas"
   class="flex flex-col md:flex-row items-center py-6"
   x-intersect="activeStep = 'spy-2'"
 >
@@ -15,29 +15,24 @@ import MockupOne from "@components/mockup/MockupOne.astro";
       <h4
         class="font-sans font-semibold text-xs tracking-widest uppercase mb-3 text-primary-500"
       >
-        Health Monitoring Tools
+        Стандарты
       </h4>
       <!--Title-->
       <h2
         class="font-heading font-medium text-4xl text-muted-800 dark:text-white"
       >
-        Keep a close eye on your health monitoring
+      Оснащение медицинского кабинета
       </h2>
       <!--Subtitle-->
       <p class="font-sans text-lg text-muted-500 dark:text-muted-400">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum Torquatus:
-        Prorsus, inquit, assentior; Videmus igitur ut conquiescere.
+        Наши специалисты помогут оснастить медицинский кабинет с учетом специализации клиники, возрастной категории пациентов, пожеланий клиента, выделенного бюджета и других требований.
       </p>
-      <!--Link-->
-      <a
-        href="#"
-        class="group inline-flex items-center gap-4 text-primary-500 hover:text-primary-400 transition-colors duration-300"
-      >
-        <span class="font-sans font-medium text-sm">
-          Learn more about our suite
-        </span>
-        <iconify-icon class="iconify w-4 h-4 group-hover:translate-x-1 transition-transform duration-300" icon="lucide:arrow-right"></iconify-icon>
-      </a>
+      <p class="font-sans text-lg text-muted-500 dark:text-muted-400">
+        При оснащении кабинетов мы соблюдаем утвержденные Минздравом стандарты. Это позволяет нашим клиентам проходить процедуру лицензирования в любом городе России.
+      </p>
+      <p class="font-sans text-lg text-muted-500 dark:text-muted-400">
+        Мы также рассчитаем по вашему запросу выгодную систему оснащения кабинета врача в лизинг.
+      </p>
     </div>
   </div>
 
