--- a/src/components/hero/HeroMain.astro
+++ b/src/components/hero/HeroMain.astro
@@ -18,9 +18,9 @@ import Hero from '../../../public/img/illustrations/doctor-hero.png'
             class="text-center ltablet:text-left lg:text-left font-sans space-y-4"
           >
             <h1
-              class="font-medium text-4xl ptablet:text-5xl lg:text-5xl text-muted-800 dark:text-white"
+              class="font-medium text-3xl ptablet:text-4xl lg:text-4xl text-muted-800 dark:text-white"
             >
-            Комплексное оснащения медицинских центров
+            Комплексное оснащение медицинских центров
             </h1>
             <p class="text-lg text-muted-500 dark:text-muted-400">
               Оснащение клиник и больниц "под ключ" — томографы, УЗИ, рентген-аппараты и расходные материалы от ведущих мировых брендов. Гарантия качества, профессиональный сервис и доставка по всей России.
