--- a/src/components/content/features/SideStatsLeft.astro
+++ b/src/components/content/features/SideStatsLeft.astro
@@ -2,7 +2,7 @@
 import MockupTwo from '@components/mockup/MockupTwo.astro'
 ---
 
-<div class="flex flex-col-reverse md:flex-row items-center py-6">
+<div id="lizing" class="flex flex-col-reverse md:flex-row items-center py-6">
   <!--Column-->
   <div class="w-full md:w-1/2 relative p-6">
     <!--Feature-->
@@ -14,27 +14,19 @@ import MockupTwo from '@components/mockup/MockupTwo.astro'
     <!--Section content-->
     <div class="w-full max-w-lg space-y-4">
       <!--Badge-->
-      <h4 class="font-sans font-semibold text-xs tracking-widest uppercase mb-3 text-primary-500">Remote Conversations</h4>
+      <h4 class="font-sans font-semibold text-xs tracking-widest uppercase mb-3 text-primary-500">Лизинг</h4>
       <!--Title-->
       <h2 class="font-heading font-medium
           text-4xl text-muted-800
-          dark:text-white">Use messaging to keep up with your practician</h2>
+          dark:text-white">Медицинское оборудование в лизинг частным и государственным ЛПУ</h2>
       <!--Subtitle-->
       <p class="font-sans text-lg text-muted-500 dark:text-muted-400">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tum Torquatus: Prorsus, inquit, assentior; Videmus igitur ut conquiescere.
+        Лизинг - это один из самых выгодных способов приобретения медицинского оборудования. Вы можете оплатить лизинг из любых источников финансирования, включая средства ОМС. Лизинг медицинского оборудования освобожден от уплаты НДС.
       </p>
-      <!--Link-->
-      <a href="#" class="group
-          inline-flex
-          items-center
-          gap-4
-          text-primary-500
-          hover:text-primary-400
-          transition-colors
-          duration-300">
-        <span class="font-sans font-medium text-sm"> Learn more about our suite </span>
-        <iconify-icon class="iconify w-4 h-4 group-hover:translate-x-1 transition-transform duration-300" icon="lucide:arrow-right"></iconify-icon>
-      </a>
+      <p class="font-sans text-lg text-muted-500 dark:text-muted-400">
+        Предметом лизинга может быть любое медицинское оборудование, кроме расходных материалов и инструментов, если они не входят в комплект основного оборудования
+      </p>
+      
     </div>
   </div>
 </div>
