--- a/src/components/hero/HeroMainModuleOne.astro
+++ b/src/components/hero/HeroMainModuleOne.astro
@@ -29,7 +29,7 @@ const equipment = [
   </div>
   <div class="flex justify-between items-center gap-4">
     {equipment.map((eq)=>(
-    <div class="bg-[#f1f5f9] p-2 rounded-2xl mr-2">
+    <div class="bg-[#f1f5f9] p-2 rounded-2xl mr-2 dark:bg-slate-700">
       <Image src={eq.img}
       class="object-cover w-12 h-12 mask mask-blob"
     alt={eq.alt}
