--- a/src/components/mockup/MockupTwo.astro
+++ b/src/components/mockup/MockupTwo.astro
@@ -1,3 +1,9 @@
+---
+import { Image } from "astro:assets";
+import med1 from "../../pic/med1.jpg";
+import med2 from "../../pic/med2.jpg";
+import med3 from "../../pic/med3.jpg";
+---
 <div class="relative w-full max-w-sm mx-auto space-y-4">
   <!--Background shape-->
   <div
@@ -7,71 +13,21 @@
 
   <!--Item-->
   <div
-    class="relative -left-8 ptablet:-left-16 z-10 w-full p-5 rounded-xl bg-white dark:bg-muted-800 border border-muted-200 dark:border-muted-700 shadow-xl shadow-muted-400/10 dark:shadow-muted-800/10"
+    class="relative -left-8 ptablet:-left-16 z-10 w-full p-2 rounded-xl bg-white dark:bg-muted-800 border border-muted-200 dark:border-muted-700 shadow-xl shadow-muted-400/10 dark:shadow-muted-800/10"
   >
-    <div class="flex gap-4">
-      <img
-        class="object-cover w-14 h-14 mask mask-blob"
-        src="https://media.cssninja.io/shuriken/avatars/2.svg"
-        alt="Avatar"
-        width="56"
-        height="56"
-      />
-      <div>
-        <h4 class="font-heading font-medium text-muted-800 dark:text-muted-100">
-          Maya Rosselini
-        </h4>
-        <p class="font-sans text-xs text-muted-400 mb-2">12 minutes ago</p>
-        <p class="font-sans text-sm text-muted-500">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-        </p>
-      </div>
-    </div>
+  <Image class="rounded-md" src={med1} alt="med1" />
   </div>
   <!--Item-->
   <div
-    class="relative -right-8 ptablet:right-0 z-10 w-full p-5 rounded-xl bg-white dark:bg-muted-800 border border-muted-200 dark:border-muted-700 shadow-xl shadow-muted-400/10 dark:shadow-muted-800/10"
+    class="relative -right-8 ptablet:right-0 z-10 w-full p-2 rounded-xl bg-white dark:bg-muted-800 border border-muted-200 dark:border-muted-700 shadow-xl shadow-muted-400/10 dark:shadow-muted-800/10"
   >
-    <div class="flex flex-row-reverse gap-4">
-      <img
-        class="object-cover w-14 h-14 mask mask-blob"
-        src="https://media.cssninja.io/shuriken/avatars/14.svg"
-        alt="Avatar"
-        width="56"
-        height="56"
-      />
-      <div>
-        <h4 class="font-heading font-medium text-muted-800 dark:text-muted-100">
-          Dr. Glenn Heartman
-        </h4>
-        <p class="font-sans text-xs text-muted-400 mb-2">8 minutes ago</p>
-        <p class="font-sans text-sm text-muted-500">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-        </p>
-      </div>
-    </div>
+    
+  <Image class="rounded-md" src={med2} alt="med2" />
   </div>
   <!--Item-->
   <div
-    class="relative -left-8 ptablet:-left-16 z-10 w-full p-5 rounded-xl bg-white dark:bg-muted-800 border border-muted-200 dark:border-muted-700 shadow-xl shadow-muted-400/10 dark:shadow-muted-800/10"
+    class="relative -left-8 ptablet:-left-16 z-10 w-full p-2 rounded-xl bg-white dark:bg-muted-800 border border-muted-200 dark:border-muted-700 shadow-xl shadow-muted-400/10 dark:shadow-muted-800/10"
   >
-    <div class="flex gap-4">
-      <img
-        class="object-cover w-14 h-14 mask mask-blob"
-        src="https://media.cssninja.io/shuriken/avatars/2.svg"
-        alt="Avatar"
-        width="56"
-        height="56"
-      />
-      <div>
-        <h4 class="font-heading font-medium text-muted-800 dark:text-muted-100">
-          Maya Rosselini
-        </h4>
-        <p class="font-sans text-xs text-muted-400 mb-2">6 minutes ago</p>
-        <p class="font-sans text-sm text-muted-500">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-        </p>
-      </div>
-    </div>
+  <Image class="rounded-md" src={med3} alt="med3" />
   </div>
 </div>
