--- a/src/components/section/SectionMuted.astro
+++ b/src/components/section/SectionMuted.astro
@@ -1,10 +1,11 @@
 ---
-const { class: className } = Astro.props;
+const { class: className, id } = Astro.props;
 ---
 
 <section
   class="w-full py-16 px-4 bg-muted-100 dark:bg-muted-1000"
   :class={className}
+  id={id}
 >
   <slot />
 </section>
