--- a/src/components/content/FeaturesNavs.astro
+++ b/src/components/content/FeaturesNavs.astro
@@ -60,7 +60,7 @@ import img3 from "../../pic/img3.jpg";
           <!-- Tab Content -->
           <div>
             <div id="tabs-with-card-1" role="tabpanel" aria-labelledby="tabs-with-card-item-1">
-              <Image src={img1} alt="PageSpeed" class="shadow-xl shadow-gray-200 rounded-t-2xl" />
+              <Image src={img1} alt="PageSpeed" class="shadow-xl shadow-gray-200 dark:shadow-gray-700 rounded-t-2xl" />
               <div class="mt-6 py-4 px-6 bg-slate-50 dark:bg-gray-700 rounded-b-2xl">
                 <p class="mb-2">В компании «MedicaEquip» вы можете приобрести медоборудование или заказать комплексное оснащение в рассрочку, аренду или лизинг.</p>
                 <p class="mb-2">Каталог содержит медицинскую технику и расходные материалы более чем 50 известных крупнейших компаний. Наши официальные партнеры:</p>
@@ -78,7 +78,7 @@ import img3 from "../../pic/img3.jpg";
             </div>
 
             <div id="tabs-with-card-2" class="hidden" role="tabpanel" aria-labelledby="tabs-with-card-item-2">
-              <Image class="shadow-xl shadow-gray-200 rounded-t-2xl" src={img2} alt={`бесшовные переходы`} loading="eager" />
+              <Image class="shadow-xl shadow-gray-200 dark:shadow-gray-700 rounded-t-2xl" src={img2} alt={`бесшовные переходы`} loading="eager" />
               <div class="mt-6 py-4 px-6 bg-slate-50 dark:bg-gray-700 rounded-b-2xl">
                 <p class="mb-2">У нас можно заказать отдельные виды приборов, комплексное оснащение клиники или отделения больницы. Сотрудники АО «MedicaEquip» помогут вам в выборе подходящих товаров, учтут ваши пожелания и требования, а также существующие стандарты оснащения медицинских учреждений.</p>
                 <p class="mb-2">Все поставляемые товары сертифицированы и имеют гарантию производителя.</p>
@@ -86,7 +86,7 @@ import img3 from "../../pic/img3.jpg";
             </div>
 
             <div id="tabs-with-card-3" class="hidden" role="tabpanel" aria-labelledby="tabs-with-card-item-3">
-              <Image class="shadow-xl shadow-gray-200 rounded-t-2xl" src={img3} alt={`Бесплатный хостинг`} />
+              <Image class="shadow-xl shadow-gray-200 dark:shadow-gray-700 rounded-t-2xl" src={img3} alt={`Бесплатный хостинг`} />
               <div class="mt-6 py-4 px-6 bg-slate-50 dark:bg-gray-700 rounded-b-2xl">
                 <p class="mb-2">У нас собственный склад, служба ВЭД и логистики, чтобы предложить самовывоз или обеспечить оперативную доставку по Санкт-Петербургу и Ленобласти.</p>
                 <p class="mb-2">Доставка медицинской техники и приборов осуществляется в любой регион России по тарифам транспортной компании.</p>
