--- a/src/components/hero/HeroMain.astro
+++ b/src/components/hero/HeroMain.astro
@@ -15,7 +15,7 @@ import Hero from '../../../public/img/illustrations/doctor-hero.png'
           class="h-full ptablet:max-w-lg ptablet:mx-auto flex items-center mb-8 ltablet:mb-0 lg:mb-0"
         >
           <div
-            class="text-center ltablet:text-left lg:text-left font-sans space-y-4"
+            class="text-center ltablet:text-left lg:text-left font-sans space-y-4 pt-14"
           >
             <h1
               class="font-medium text-3xl ptablet:text-4xl lg:text-4xl text-muted-800 dark:text-white"
