--- a/src/components/section/Footer.astro
+++ b/src/components/section/Footer.astro
@@ -28,7 +28,7 @@ import Logo from "@components/base/Logo.astro";
         </div>
         <div class="w-full mb-10 ltablet:mb-0 lg:mb-0 ltablet:w-2/6 lg:w-3/6 px-4">
           
-          <div class="font-bold text-lg mb-8">Заказать обратный звонок</div>
+          <div class="font-bold text-lg mb-8 dark:text-gray-50">Заказать обратный звонок</div>
             <div class="w-full ltablet:w-auto lg:w-auto flex flex-col md:flex-row items-center justify-center md:justify-start gap-y-2">
             <div class="relative w-full sm:w-64 md:w-40 sm:mr-4 mr-2">
               <input
