--- a/src/components/section/Footer.astro
+++ b/src/components/section/Footer.astro
@@ -74,7 +74,7 @@ import Logo from "@components/base/Logo.astro";
         >
         Не является публичной офертой | © 2018-{new Date().getFullYear()} | Разработка 
           <a
-            href="https://cssninja.io"
+            href="https://kryukovs.ru"
             class="hover:text-primary-500"
             target="_blank"
             rel="noopener noreferrer">kryukovs.ru</a
