поменял название конторы

--- a/src/components/content/FeaturesNavs.astro
+++ b/src/components/content/FeaturesNavs.astro
@@ -24,7 +24,7 @@ import img3 from "../../pic/img3.jpg";
               <svg class="shrink-0 mt-2 size-6 md:size-7 hs-tab-active:text-primary-600  text-gray-800" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m12 14 4-4"/><path d="M3.34 19a10 10 0 1 1 17.32 0"/></svg>
               <span class="grow">
                 <span class="font-sans text-2xl font-medium mb-4 text-muted-800 dark:text-muted-100">Ассортимент</span>
-                <span class="block mt-1 text-gray-800 dark:text-muted-400">Компания «MedicaEquip» предлагает широкий ассортимент медоборудования и расходных материалов от ведущих мировых производителей.</span>
+                <span class="block mt-1 text-gray-800 dark:text-muted-400">Компания «РосСнаб73» предлагает широкий ассортимент медоборудования и расходных материалов от ведущих мировых производителей.</span>
               </span>
             </span>
           </button>
@@ -62,7 +62,7 @@ import img3 from "../../pic/img3.jpg";
             <div id="tabs-with-card-1" role="tabpanel" aria-labelledby="tabs-with-card-item-1">
               <Image src={img1} alt="PageSpeed" class="shadow-xl shadow-gray-200 dark:shadow-gray-700 rounded-t-2xl" />
               <div class="mt-6 py-4 px-6 bg-slate-50 dark:bg-gray-700 rounded-b-2xl">
-                <p class="mb-2">В компании «MedicaEquip» вы можете приобрести медоборудование или заказать комплексное оснащение в рассрочку, аренду или лизинг.</p>
+                <p class="mb-2">В компании «РосСнаб73» вы можете приобрести медоборудование или заказать комплексное оснащение в рассрочку, аренду или лизинг.</p>
                 <p class="mb-2">Каталог содержит медицинскую технику и расходные материалы более чем 50 известных крупнейших компаний. Наши официальные партнеры:</p>
                 <ul class="mb-2">
                   <li>- Tomey, Pentax (Япония)</li>
@@ -80,7 +80,7 @@ import img3 from "../../pic/img3.jpg";
             <div id="tabs-with-card-2" class="hidden" role="tabpanel" aria-labelledby="tabs-with-card-item-2">
               <Image class="shadow-xl shadow-gray-200 dark:shadow-gray-700 rounded-t-2xl" src={img2} alt={`бесшовные переходы`} loading="eager" />
               <div class="mt-6 py-4 px-6 bg-slate-50 dark:bg-gray-700 rounded-b-2xl">
-                <p class="mb-2">У нас можно заказать отдельные виды приборов, комплексное оснащение клиники или отделения больницы. Сотрудники АО «MedicaEquip» помогут вам в выборе подходящих товаров, учтут ваши пожелания и требования, а также существующие стандарты оснащения медицинских учреждений.</p>
+                <p class="mb-2">У нас можно заказать отдельные виды приборов, комплексное оснащение клиники или отделения больницы. Сотрудники АО «РосСнаб73» помогут вам в выборе подходящих товаров, учтут ваши пожелания и требования, а также существующие стандарты оснащения медицинских учреждений.</p>
                 <p class="mb-2">Все поставляемые товары сертифицированы и имеют гарантию производителя.</p>
               </div>
             </div>
