--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,7 +16,7 @@ import Brands from "@components/content/Brands.astro";
 import Features from "@components/content/FeaturesNavs.astro";
 ---
 
-<Layout title="Продажа медицинского оборудования и расходных материалов для клиник | MedicaEquip">
+<Layout title="Продажа медицинского оборудования и расходных материалов для клиник | РосСнаб73">
   <HeroMain />
 
   <div class="bg-muted-100 dark:bg-muted-1000 pb-32">
