--- a/src/components/navigation/Navbar.astro
+++ b/src/components/navigation/Navbar.astro
@@ -27,7 +27,7 @@ import NavbarSearchFilters from "@components/navigation/NavbarSearchFilters.astr
         </div>
         <span
           class="font-sans text-lg tracking-widest uppercase text-muted-800 dark:text-muted-100"
-          >MedicaEquip</span
+          >РосСнаб73</span
         >
       </a>
       <div class="flex items-center justify-center h-20 w-20 lg:hidden ml-auto">
@@ -64,7 +64,7 @@ import NavbarSearchFilters from "@components/navigation/NavbarSearchFilters.astr
         </div>
       </div>
       <div class="w-full md:w-auto">
-        <a class="text-md font-bold dark:text-[#fff]" href="tel:+79999999999"> +7 999 999 99 99</a>
+        <a class="text-md font-bold dark:text-[#fff]" href="tel:+79021254556"> +7 902 125 45 56</a>
       </div>
     </div>
   </div>
