--- a/src/components/section/Footer.astro
+++ b/src/components/section/Footer.astro
@@ -18,7 +18,7 @@ import Logo from "@components/base/Logo.astro";
               </div>
               <span
                 class="font-sans text-lg tracking-widest uppercase text-muted-800 dark:text-muted-100"
-                >MedicaEquip</span
+                >РосСнаб73</span
               >
             </a>
             <p class="text-sm text-muted-500 dark:text-muted-400 mb-10 md:mb-0">
