--- a/src/components/hero/HeroMain.astro
+++ b/src/components/hero/HeroMain.astro
@@ -17,12 +17,17 @@ import Hero from '../../../public/img/illustrations/doctor-hero.png'
           <div
             class="text-center ltablet:text-left lg:text-left font-sans space-y-4 pt-14"
           >
-            <h1
-              class="font-medium text-3xl ptablet:text-4xl lg:text-4xl text-muted-800 dark:text-white"
+            <p
+              class="font-medium text-3xl ptablet:text-4xl lg:text-[42px] mt-12 lg:mt-1 mb-8 text-muted-800 dark:text-white"
             >
-            Комплексное оснащение медицинских центров
+            Комплексная медицина
+            </p>
+            <h1
+              class="font-medium text-2xl ptablet:text-3xl lg:text-3xl text-muted-800 dark:text-white"
+            >
+            Оснащение медицинских центров
             </h1>
-            <p class="text-lg text-muted-500 dark:text-muted-400">
+            <p class="text-sm md:text-lg text-muted-500 dark:text-muted-400">
               Оснащение клиник и больниц "под ключ" — томографы, УЗИ, рентген-аппараты и расходные материалы от ведущих мировых брендов. Гарантия качества, профессиональный сервис и доставка по всей России.
             </p>
             <div
