--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -100,7 +100,7 @@ import Features from "@components/content/FeaturesNavs.astro";
         <div>
           <IconBlock
             title="Экономьте время и усилия"
-            text="описание описание описание описание описание описание описание описание "
+            text="Берём на себя весь процесс оснащения клиники под ключ."
             icon="ph:timer-duotone"
             class="'text-primary-600'"
           />
@@ -109,7 +109,7 @@ import Features from "@components/content/FeaturesNavs.astro";
         <div>
           <IconBlock
             title="Профессионалы своего дела"
-            text="описание описание описание описание описание описание описание описание "
+            text="Опытная команда обеспечивает подбор и установку нужного оборудования."
             icon="ph:first-aid-duotone"
             class="'text-rose-500'"
           />
@@ -118,7 +118,7 @@ import Features from "@components/content/FeaturesNavs.astro";
         <div>
           <IconBlock
             title="Комплексный подход"
-            text="описание описание описание описание описание описание описание описание "
+            text="Полное решение: от планирования до установки и обслуживания."
             icon="ph:first-aid-kit-duotone"
             class="'text-primary-600'"
           />
@@ -127,7 +127,7 @@ import Features from "@components/content/FeaturesNavs.astro";
         <div>
           <IconBlock
             title="Иновации"
-            text="описание описание описание описание описание описание описание описание "
+            text="Современные технологии и передовые решения для медицинских центров."
             icon="ph:heartbeat-duotone"
             class="'text-rose-500'"
           />
@@ -136,7 +136,7 @@ import Features from "@components/content/FeaturesNavs.astro";
         <div>
           <IconBlock
             title="Видеоконсультации"
-            text="описание описание описание описание описание описание описание описание "
+            text="Удобные видеоконсультации для выбора и согласования оборудования."
             icon="ph:video-camera-duotone"
             class="'text-primary-600'"
           />
@@ -145,7 +145,7 @@ import Features from "@components/content/FeaturesNavs.astro";
         <div>
           <IconBlock
             title="Технические консультации"
-            text="описание описание описание описание описание описание описание описание "
+            text="Квалифицированная поддержка и консультации по техническим вопросам."
             icon="ph:phone-duotone"
             class="'text-primary-600'"
           />
@@ -154,7 +154,7 @@ import Features from "@components/content/FeaturesNavs.astro";
         <div>
           <IconBlock
             title="Надежность и пунктуальность"
-            text="описание описание описание описание описание описание описание описание "
+            text="Безопасные поставки и точное выполнение всех сроков."
             icon="ph:calendar-duotone"
             class="'text-primary-600'"
           />
@@ -163,7 +163,7 @@ import Features from "@components/content/FeaturesNavs.astro";
         <div>
           <IconBlock
             title="Экспертность"
-            text="описание описание описание описание описание описание описание описание "
+            text="Глубокие знания и опыт в оснащении медицинских учреждений."
             icon="ph:pill-duotone"
             class="'text-primary-600'"
           />
@@ -176,7 +176,7 @@ import Features from "@components/content/FeaturesNavs.astro";
     <Container>
       <SectionTitle
         title="Каталог поставляемой продукции"
-        subtitle="описание описание описание описание описание описание описание описание описание описание"
+        subtitle="Качественное медицинское оборудование и расходные материалы от ведущих производителей для оснащения клиник и медицинских учреждений."
         minititle="Оборудование"
         class="'mx-auto text-center'"
       />
