--- a/src/components/section/Footer.astro
+++ b/src/components/section/Footer.astro
@@ -22,7 +22,7 @@ import Logo from "@components/base/Logo.astro";
               >
             </a>
             <p class="text-sm text-muted-500 dark:text-muted-400 mb-10 md:mb-0">
-              Описание описание описание описание описание описание описание описание описание описание описание описание описание
+              Оснащение клиник и больниц "под ключ" — томографы, УЗИ, рентген-аппараты и расходные материалы от ведущих мировых брендов.
             </p>
           </div>
         </div>
