добавил попап формы, нужно исправить name='главный экран'

--- a/src/components/content/FeaturesNavs.astro
+++ b/src/components/content/FeaturesNavs.astro
@@ -61,7 +61,7 @@ import img3 from "../../pic/img3.jpg";
           <div>
             <div id="tabs-with-card-1" role="tabpanel" aria-labelledby="tabs-with-card-item-1">
               <Image src={img1} alt="PageSpeed" class="shadow-xl shadow-gray-200 dark:shadow-gray-700 rounded-t-2xl" />
-              <div class="mt-6 py-4 px-6 bg-slate-50 dark:bg-gray-700 rounded-b-2xl">
+              <div class="mt-6 py-4 px-6 bg-slate-50 dark:bg-gray-700 rounded-b-2xl text-muted-500 dark:text-muted-400">
                 <p class="mb-2">В компании «РосСнаб73» вы можете приобрести медоборудование или заказать комплексное оснащение в рассрочку, аренду или лизинг.</p>
                 <p class="mb-2">Каталог содержит медицинскую технику и расходные материалы более чем 50 известных крупнейших компаний. Наши официальные партнеры:</p>
                 <ul class="mb-2">
