--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -16,3 +16,16 @@
     @apply outline-dashed outline-muted-300 dark:outline-muted-600 outline-offset-2;
   }
 }
+.modal {
+  opacity: 0;
+  transform: scale(0.95);
+  transition: opacity 0.3s ease, transform 0.3s ease;
+}
+.modal.show {
+  opacity: 1;
+  transform: scale(1);
+}
+.border-red-500 {
+  border-color: #f87171; /* Красный цвет для ошибок */
+  box-shadow: 0 0 5px rgba(248, 113, 113, 0.5);
+}
